methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:19: error: not found: value makePattern2
  makePattern2(Color.BLUE)
  ^PatternPicture:26: error: not found: value makePattern2
  makePattern2(Color.YELLOW)
  ^PatternPicture:40: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
  paint()
  ^PatternPicture:45: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
  paint()
  ^PatternPicture:51: error: not found: value defmakePattern2
defmakePattern2(c:Color) {
^PatternPicture:51: error: not found: value c
defmakePattern2(c:Color) {
                ^PatternPicture:52: error: not found: value c
  setBrushColor(c:Color)
                ^PatternPicture:53: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
  paint()
  ^PatternPicture:57: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
  paint()
  ^PatternPicture:118: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
             paint()
             ^PatternPicture:122: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
             paint()
             ^PatternPicture:126: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
             paint()
             ^PatternPicture:131: error: method paint is defined twice
  conflicting symbols both originated in file 'plm.runtime42.PatternPicture'
def paint() {brushDown()
    ^PatternPicture:89: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime42.PatternPicture'
override def run() {
             ^